<resources>
    <string name="app_name">Gallery Test</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_edit_text_hint">Type Text</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_gallery">Pick a Gallery Image</string>
    <string name="pick_camera">Pick a Camera Photo</string>
    <string name="share_video">Share Your Video With</string>
    <string name="time_sec_ago">%d sec ago</string>
    <string name="time_min_ago">%d min ago</string>
    <string name="time_hour_ago">%d hr ago</string>
    <string name="time_week_ago">%d week ago</string>
    <string name="time_day_ago">%d day ago</string>
    <string name="time_sec_long">%d sec long</string>
    <string name="time_min_long">%d min long</string>
    <string name="time_hour_long">%d hr long</string>
    <string name="time_week_long">%d week long</string>
    <string name="time_day_long">%d day long</string>
    <string name="search_hint">Search ...</string>
    <string name="today_delivery">Today\'s Delivery</string>
    <string name="item_count">%d Items</string>
    <string name="empty_delivery">No Delivery for Today</string>
    <string name="assembly_required">Fully Assembly Required</string>
    <string name="breakdown_required">Requres Breakdown to Move</string>
    <string name="size_string">%s x %s x %s (in)</string>
    <string name="weight_string">%s (lbs)</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivery_time">Delivery In</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="delivery_by">Delivery By</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_placeholder">example@test.com</string>
    <string name="welcome">Welcome!</string>
    <string name="or">Or</string>
    <string name="create_account">Create an account</string>
    <string name="login_email_password_error">You should input valid Email address and Password</string>
    <string name="forgot_password_prompt">Input the email address of your account you want to reset.</string>
    <string name="forgot_password_success">Email for resetting your password sent to you.</string>
    <string name="invalid_values_prompt">You should input valid values.</string>
    <string name="connect_failed">Bluetooth connection failed</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_service">Terms of services</string>
    <string name="no_choice">No Choice</string>
    <string name="country">Country</string>
    <string name="username">Username</string>
    <string name="agree">I agree</string>
    <string name="disagree">Disagree</string>
    <string name="terms_service_prompt">You have to agree to terms and services to be one of our members.</string>
    <string name="edit_gallery">Edit Gallery</string>
    <string name="title">Title</string>
    <string name="story">Story</string>
    <string name="submit">Submit</string>
    <string name="gallery_details">Gallery Details</string>
    <string name="gallery_photo_prompt">Taking photo is mandatory to save changes to gallery item.</string>
    <string name="gallery_title_prompt">You should input valid title for gallery item</string>
    <string name="gallery_story_prompt">You should input valid text for gallery story</string>
    <string name="open_details">Open Details</string>
</resources>