<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?defaultMainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_gravity="start"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="@dimen/_98sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:src="@drawable/bg_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                style="@style/Theme.FirebaseNative.TitleText.Italic"
                android:textSize="@dimen/_36sdp"
                android:text="@string/welcome" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                style="@style/Theme.FirebaseNative.AuthInput"
                android:layout_marginBottom="@dimen/_18sdp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                style="@style/Theme.FirebaseNative.AuthInput"
                android:layout_marginBottom="@dimen/_18sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_placeholder" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                style="@style/Theme.FirebaseNative.AuthInput"
                android:layout_marginBottom="@dimen/_18sdp"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/terms_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layoutDirection="rtl"
                android:text="@string/terms_service" />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                style="@style/Theme.FirebaseNative.ClickableLayout.Text.Coral"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>