<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?defaultMainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_gravity="start"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="@dimen/_98sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:src="@drawable/bg_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_48sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                style="@style/Theme.FirebaseNative.TitleText.Italic"
                android:textSize="@dimen/_36sdp"
                android:text="@string/welcome" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                style="@style/Theme.FirebaseNative.AuthInput"
                android:layout_marginBottom="@dimen/_18sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_placeholder" />

            <EditText
                android:id="@+id/password"
                style="@style/Theme.FirebaseNative.AuthInput"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_18sdp"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                style="@style/Theme.FirebaseNative.ClickableLayout.Text.Coral"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_remember"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_4sdp"
                    style="@style/Theme.FirebaseNative.AuthInfoText"
                    android:text="@string/remember_me" />
                <TextView
                    android:id="@+id/forgot_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.FirebaseNative.AuthInfoText"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    style="@style/Theme.FirebaseNative.SubTitleText"
                    android:textSize="@dimen/_12sdp"
                    android:textAllCaps="true"
                    android:text="@string/or" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                style="@style/Theme.FirebaseNative.ClickableLayout.Text.Stroke"
                android:text="@string/create_account" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>