<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?defaultMainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:tint="@color/black"
            android:src="@drawable/back"
            style="@style/Theme.DeliveryAsap.ClickableLayout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.DeliveryAsap.TitleTextStyle.Big"
            android:text="@string/delivery_details" />

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle"
                android:text="@string/delivery_time" />

            <TextView
                android:id="@+id/delivery_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle"
                android:textColor="@color/black"
                android:text="@string/delivery_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle.Bold"
                android:textColor="@color/coral"
                tools:text="$ 120" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_96sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle.Bold"
                android:textColor="@color/black"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:text="Comet Ace" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_96sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle.Bold"
                android:textColor="@color/black"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:text="test@someone.com" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_96sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                style="@style/Theme.DeliveryAsap.InfoTextStyle.Bold"
                android:textColor="@color/black"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_8sdp"
                tools:text="123456789" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/take_photo"
                style="@style/Theme.DeliveryAsap.ClickableLayout.Text.Coral"
                android:layout_width="@dimen/_128sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/take_a_photo" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/delivery_photo"
            android:layout_width="@dimen/_128sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/items_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            style="@style/Theme.DeliveryAsap.InfoTextStyle"
            android:text="@string/empty_delivery" />
    </RelativeLayout>
</LinearLayout>